@@ -11,18 +11,5 @@ INCLUDES = -I$(top_srcdir)/kivio/kiviopart -I.. \
 
 libui_la_METASOURCES = AUTO
 
-libui_la_SOURCES = \
-	aligndialog.ui\
-	kivio_birdeye_panel.cpp\
-	kivio_birdeye_panel_base.ui\
-	kivio_layer_panel_base.ui\
-	kivio_layer_panel.cpp\
-	kivio_protection_panel_base.ui\
-	kivio_protection_panel.cpp\
-	kiviooptionsdialog.cpp\
-	export_page_dialog_base.ui\
-	export_page_dialog.cpp \
-	kiviotextformatdlg.cpp \
-	kiviostencilformatdlg.cpp \
-	kivioarrowheadformatdlg.cpp \
-	kivioaligndialog.cpp
+libui_la_SOURCES = aligndialog.ui	kivio_birdeye_panel.cpp	kivio_birdeye_panel_base.ui	kivio_layer_panel_base.ui	kivio_layer_panel.cpp	kivio_protection_panel_base.ui	kivio_protection_panel.cpp	kiviooptionsdialog.cpp	export_page_dialog_base.ui	export_page_dialog.cpp 	kiviotextformatdlg.cpp 	kiviostencilformatdlg.cpp 	kivioarrowheadformatdlg.cpp 	kivioaligndialog.cpp kivioaddstencilsetpanel.cpp kiviostencilsetwidget.ui
+noinst_HEADERS =  kivioaddstencilsetpanel.h
